<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="opleidingsOnderdeelViewModel"
            type="be.hogent.tile3.rubricapplication.ui.OpleidingsOnderdeelViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/opleiding_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor">

        <ProgressBar
            android:id="@+id/spinning_loader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:indeterminate="true"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/opleidingenList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/card_background"
            android:elevation="6dp"
            android:textAlignment="textStart"
            app:apiStatusRV="@{opleidingsOnderdeelViewModel.status}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinning_loader">

        </androidx.recyclerview.widget.RecyclerView>Ò

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>