<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="rubricSelectViewModel"
            type="be.hogent.tile3.rubricapplication.ui.RubricSelectViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/rubricSelectFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <ProgressBar
        android:id="@+id/spinning_loader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rubricList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background"
        android:elevation="6dp"
        android:textAlignment="textStart"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>